--- a/script/genfiles/beginning.tex
+++ b/script/genfiles/beginning.tex
@@ -17,6 +17,7 @@
 \setcounter{tocdepth}{4}
 
 \setlist[itemize]{topsep=0pt}
+\setlist[enumerate]{topsep=0pt}
 \setlength{\itemindent}{0cm}
 \setlength{\parskip}{9pt}
 \setlength\parindent{0pt}
