--- a/script/genfiles/beginning.tex
+++ b/script/genfiles/beginning.tex
@@ -1,26 +1,48 @@
 \documentclass[a4paper, 12pt]{article}
-
-\usepackage{amsmath}
 \usepackage[total={17cm,25cm}, top=2.5cm, left=2cm, includefoot]{geometry}
+
+% MATH %
+\usepackage{amsmath}
+
+
+% LISTS %
 \usepackage{enumitem}
+
+% remove top lists separation
+\setlist[itemize]{topsep=0pt}
+\setlist[enumerate]{topsep=0pt}
+
+
+% URL HIGHLIGHTING %
 \usepackage{hyperref}
+
+
+% CODE %
 \usepackage{listings}
 \usepackage{color}
-\usepackage{graphicx}
-\usepackage{titlesec}
 
+
+% GRAPHICS
+\usepackage{graphicx}
+
+
+% FONTS %
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 
+
+% HEADINGS %
+\usepackage{titlesec}
+
+% define subsubsubsection
 \newcommand{\subsubsubsection}[1]{\paragraph{#1}\mbox{}\\}
 \setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{4}
 
-\setlist[itemize]{topsep=0pt}
-\setlist[enumerate]{topsep=0pt}
 \setlength{\itemindent}{0cm}
 \setlength{\parskip}{9pt}
 \setlength\parindent{0pt}
+
 
 \lstset{
 	language=Python,
