update URL formatting and color

--- a/script/genfiles/beginning.tex
+++ b/script/genfiles/beginning.tex
@@ -14,7 +14,13 @@
 
 
 % URL HIGHLIGHTING %
-\usepackage{hyperref}
+\usepackage[hyphens,spaces,obeyspaces]{url} % for formatting urls
+\usepackage[hidelinks, unicode,
+						colorlinks = true,
+						linkcolor = black,
+						urlcolor  = blue,
+						citecolor = black,
+						anchorcolor = black]{hyperref}
 
 
 % CODE %
