update page margins

--- a/script/genfiles/beginning.tex
+++ b/script/genfiles/beginning.tex
@@ -1,5 +1,5 @@
-\documentclass[a4paper, 12pt]{article}
-\usepackage[total={17cm,25cm}, top=2.5cm, left=2cm, includefoot]{geometry}
+\documentclass[12pt]{article}
+\usepackage[a4paper,includefoot,margin=2.54cm]{geometry}
 
 % MATH %
 \usepackage{amsmath}
