change itemize and enumerate separation
Remove separation between the items and above the itemize, and add a paragraph skip after.

--- a/script/genfiles/beginning.tex
+++ b/script/genfiles/beginning.tex
@@ -9,8 +9,7 @@
 \usepackage{enumitem}
 
 % remove top lists separation
-\setlist[itemize]{topsep=0pt}
-\setlist[enumerate]{topsep=0pt}
+\setlist{noitemsep,topsep=-\parskip}
 
 
 % URL HIGHLIGHTING %
