change \subsubsubsection definition
The previous solution was not a good one, as explained in this StackOverflow post: https://tex.stackexchange.com/questions/60209/how-to-add-an-extra-level-of-sections-with-headings-below-subsubsection#60212.

--- a/script/genfiles/beginning.tex
+++ b/script/genfiles/beginning.tex
@@ -43,14 +43,17 @@
 % HEADINGS %
 \usepackage{titlesec}
 
-% define subsubsubsection
-\newcommand{\subsubsubsection}[1]{\paragraph{#1}\mbox{}\\}
+% define subsubsubsection as parahraph
+\titleformat{\paragraph}{\bfseries\normalsize}{\theparagraph}{1em}{}
 \setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{4}
 
 \setlength{\itemindent}{0cm}
 \setlength{\parskip}{9pt}
 \setlength\parindent{0pt}
+
+% create the command subsubsubsection
+\let\subsubsubsection\paragraph
 
 % ---------------------------------------------------------------------------- %
 
