reduce code examples line spacing

--- a/script/genfiles/beginning.tex
+++ b/script/genfiles/beginning.tex
@@ -42,6 +42,7 @@
 
 % TEXT FORMATTING %
 \usepackage{titlesec}
+\usepackage{setspace}
 
 % define subsubsubsection as parahraph
 \titleformat{\paragraph}{\bfseries\normalsize}{\theparagraph}{1em}{}
