fix certain UTF-8 characters not rendering

--- a/script/genfiles/beginning.tex
+++ b/script/genfiles/beginning.tex
@@ -35,9 +35,10 @@
 \usepackage{graphicx}
 
 
-% FONTS %
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
+% FONT AND ENCODING %
+\usepackage[T1]{fontenc} % font encoding
+\usepackage{fontspec}    % font selector
+\setmainfont{CMU Serif}  % main font
 
 
 % TEXT FORMATTING %
