prevent widows and orphans

--- a/script/genfiles/beginning.tex
+++ b/script/genfiles/beginning.tex
@@ -65,6 +65,9 @@
 % increase the baseline stretch for readability
 \renewcommand{\baselinestretch}{1.15} % baseline stretch is 1.15
 
+\widowpenalty10000 % prevent widows
+\clubpenalty10000  % prevent orphans
+
 % ---------------------------------------------------------------------------- %
 
 \begin{document}
