PDF version datetime formatting

--- a/script/genfiles/beginning.tex
+++ b/script/genfiles/beginning.tex
@@ -50,6 +50,11 @@
 \setmainfont{CMU Serif}  % main font
 
 
+% DATETIME FORMATTING %
+\usepackage[UKenglish]{isodate}
+\cleanlookdateon % 10 October 2018
+
+
 % TEXT FORMATTING %
 \usepackage{titlesec}
 \usepackage{setspace}
